@@ -3,9 +3,9 @@ TOPLEVELDIR=..
 :include $TOPLEVELDIR/common.aap
 
 # this is no longer valid. Until aap supports sftp, use the sys cmd below.
-:attr {publish = $SF_FTP/%file%} $TARGZ $WIN32EXE
+:attr {publish = $SF_FTP/%file%} $TARGZ $WIN32EXE $WIN32EXE_UNICODE
 
-publish: $TARGZ $WIN32EXE
+publish: $TARGZ $WIN32EXE $WIN32EXE_UNICODE
     :sys sftp -b batch $GRO_URL
     :sys sftp -b batch $SF_SFTP_URL
     # :publishall
@@ -14,4 +14,4 @@ all {virtual}:
     :print 'aap publish' to publish a release to SF and gro.
 
 clean:
-    :del {r}{force} $TARGZ $WIN32EXE *.bak *~
+    :del {r}{force} $TARGZ $WIN32EXE $WIN32EXE_UNICODE *.bak *~
